--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,6 @@ version = 0.1.0
 
 [options]
 py_modules = flake8_named_arguments
+install_requires =
+    flake8>=3.7
+    importlib-metadata>=0.9;python_version<"3.8"
