--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,7 @@ py_modules = flake8_named_arguments
 install_requires =
     flake8>=3.7
     importlib-metadata>=0.9;python_version<"3.8"
+
+[options.entry_points]
+flake8.extension =
+    FNA=flake8_named_arguments:Plugin
